tests/ui/traits/const-traits/const-impl-inherent-bounds.stderr
error[E0277]: the trait bound `T: [const] Trait` is not satisfied
  --> $DIR/const-impl-inherent-bounds.rs:13:9
   |
LL |         T::method();
   |         ^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
